feat: create component door and animations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,21 +5,21 @@
             routerLink="/step-1" 
             ariaCurrentWhenActive="page" 
             routerLinkActive="active">
-            Step 1
+            1. Etapa
         </div>
         <div 
             class="main__header__tab" 
             routerLink="/step-2" 
             ariaCurrentWhenActive="page" 
             routerLinkActive="active">
-            Step 2
+            2. Etapa
         </div>
         <div 
             class="main__header__tab" 
             routerLink="/step-3" 
             ariaCurrentWhenActive="page" 
             routerLinkActive="active">
-            Step 3
+            3. Etapa
         </div>
     </div>
     <div class="main__body">
