feat: create component Door

--- a/src/app/shared/door/door.component.html
+++ b/src/app/shared/door/door.component.html
@@ -1,1 +1,16 @@
-<p>door works!</p>
+<div class="door"
+    [ngClass]="{ 'blocked' : door.blocked === true && door.open === false}">
+    <div 
+        class="door__front"
+        [ngClass]="{ 'open' : door.open === true }"
+        (click)="door.open=!door.open">
+        <div class="door__knob"></div>
+    </div>
+    <div class="door__back">
+        <div 
+            *ngIf="door.main === true"
+            class="door__back__next"
+            (click)="nextStep()"></div>
+    </div>
+    <div class="door__mat"></div>
+</div>
