feat: create component modal

--- a/src/app/pages/step-1/step-1.component.html
+++ b/src/app/pages/step-1/step-1.component.html
@@ -8,7 +8,7 @@
                 [rowspan]="door.rows">
                 <app-door 
                     [door]="door"
-                    (next)="next()"></app-door>
+                    (next)="openModal()"></app-door>
             </mat-grid-tile>
         }
     </mat-grid-list>
