feat: create system guard router

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,22 +2,19 @@
     <div class="main__header">
         <div 
             class="main__header__tab" 
-            routerLink="/step-1" 
-            ariaCurrentWhenActive="page" 
+            routerLink="/1"
             routerLinkActive="active">
             1. Etapa
         </div>
         <div 
             class="main__header__tab" 
-            routerLink="/step-2" 
-            ariaCurrentWhenActive="page" 
+            routerLink="/2"
             routerLinkActive="active">
             2. Etapa
         </div>
         <div 
             class="main__header__tab" 
-            routerLink="/step-3" 
-            ariaCurrentWhenActive="page" 
+            routerLink="/3"
             routerLinkActive="active">
             3. Etapa
         </div>
