--- a/src/app/pages/step-2/step-2.component.html
+++ b/src/app/pages/step-2/step-2.component.html
@@ -1,1 +1,15 @@
-<p>step-2 works!</p>
+<div class="step-1">
+    <mat-grid-list 
+        cols="10" 
+        rowHeight="300px">
+        @for (door of doors; track door; let idx = $index) {
+            <mat-grid-tile
+                [colspan]="door.cols"
+                [rowspan]="door.rows">
+                <app-door 
+                    [door]="door"
+                    (next)="openModal()"></app-door>
+            </mat-grid-tile>
+        }
+    </mat-grid-list>
+</div>
