feat: create style component keyboard

--- a/src/app/pages/step-3/step-3.component.html
+++ b/src/app/pages/step-3/step-3.component.html
@@ -1,1 +1,4 @@
-
+<section class="step-3">
+    <div class="step-3__password">{{ displayValue }}</div>
+    <app-keyboard (keyClicked)="onKeyClicked($event)"></app-keyboard>
+</section>
