--- a/src/app/pages/step-3/step-3.component.scss
+++ b/src/app/pages/step-3/step-3.component.scss
@@ -2,13 +2,28 @@
     width: 300px;
     margin: 0 auto;
 
+    &__door {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 100px;
+    }
+
     &__password {
-        text-align: center;
-        border-top: 2px solid black;
-        border-left: 2px solid black;
-        border-right: 2px solid black;
-        padding: 10px;
-        width: 280px;
-        font-size: 22px;
+        
+        input {
+            width: 296px;
+            height: 50px;
+            font-size: 20px;
+            border-top: 2px solid black;
+            border-left: 2px solid black;
+            border-right: 2px solid black;
+            border-bottom: none;
+        }
+    }
+
+    &__restart {
+        display: flex;
+        justify-content: center;
+        margin-top: 60px;
     }
 }
