--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,13 +14,25 @@
             padding: 20px 20px;
             text-align: center;
             font-size: 18px;
-            border-bottom: 3px solid black;
+            border-bottom: 3px solid rgb(221, 215, 215);
         }
     }
 }
 
 .active {
-    background-color: #f5eeee;
+    background-color: white;
     color: black;
-    border-bottom: 3px solid black;
+    border-bottom: 3px solid #00ba00;
+
+    &::before {
+        display: inline-block;
+        content: "";
+        background-image: url(https://cdn-icons-png.flaticon.com/512/5610/5610944.png);
+        width: 15px;
+        height: 15px;
+        background-size: 15px;
+        background-repeat: no-repeat;
+        position: relative;
+        top: 1px;
+    }
 }
