--- a/src/app/pages/step-3/step-3.component.scss
+++ b/src/app/pages/step-3/step-3.component.scss
@@ -8,16 +8,27 @@
         margin-bottom: 100px;
     }
 
+    &__invalid {
+        color: red;
+        border-top: 2px solid red;
+        border-right: 2px solid red;
+        border-left: 2px solid red;
+        padding: 10px 0 10px 0;
+        text-align: center;
+        width: 299px;
+    }
+
     &__password {
         
         input {
-            width: 296px;
+            width: 295px;
             height: 50px;
             font-size: 20px;
             border-top: 2px solid black;
             border-left: 2px solid black;
             border-right: 2px solid black;
             border-bottom: none;
+            text-align: center;
         }
     }
 
