--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -1,6 +1,4 @@
-<h1 mat-dialog-title>
-    {{ data.title }}
-</h1>
+<h1 mat-dialog-title>{{ data.title }}</h1>
     @if (data.img) {
         <div mat-dialog-content>
             <img [src]="data.img">
