feat: Rename info password incorrect

--- a/src/app/pages/step-3/step-3.component.html
+++ b/src/app/pages/step-3/step-3.component.html
@@ -7,7 +7,7 @@
         }
     </div>
     @if (!checkPassword && displayValue.length === 8) {
-        <div class="step-3__invalid">Sua senha está errada. Digite novamente</div>
+        <div class="step-3__invalid">Senha incorreta</div>
     }
     <div class="step-3__password">
         <input 
