--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,9 @@
     height: 400px;
 
     &__header {
+        position: fixed;
+        top: 0;
+        width: 100%;
         display: flex;
         background-color: white;
         color: black;
@@ -16,6 +19,10 @@
             font-size: 18px;
             border-bottom: 3px solid rgb(221, 215, 215);
         }
+    }
+
+    &__body {
+        margin-top: 150px;
     }
 }
 
